tests/paczka1/small_fuzzy/33122301.err
Error in line 6: S109 S109 84,4
Error in line 9: S109 A915 66,3
Error in line 8: Qq66EAg19r S109 84,4
